# beatstore-telegram-bot

./: .gitignore  Makefile  README.md  bot.py  pyproject.toml
db/: db_beats_init.py  db_commands.py  db_engine.py  db_map.py
details/: beats_list.py
