[tool.poetry]
name = "beatstoretelegrambot"
version = "0.1.0"
description = ""
authors = ["Arrcontender <dramman4@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.10"
aiogram = "^2.22.2"
flake8 = "^5.0.4"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
