[tool.poetry]
name = "beatstoretelegrambot"
version = "0.1.0"
description = ""
authors = ["Arrcontender <dramman4@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.10"
aiogram = "^2.22.2"
flake8 = "^5.0.4"
SQLAlchemy = "^1.4.42"
greenlet = "^1.1.3"
dispatcher = "^1.0"
psycopg2-binary = "^2.9.5"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
